--- a/assets/style.css
+++ b/assets/style.css
@@ -7,44 +7,102 @@
 }
 
 body {
-	background-color: rgb(70, 70, 100);
-	color: white;
+	height: 100vh;
+	overflow: hidden;
+	background-image: url(../img/hogwarts-express.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center bottom;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	position: relative;
 }
 
 main {
-	max-width: 60vw;
-	margin-inline: auto;
-	padding: 5rem 0;
+	position: absolute;
+	inset: 0;
+	height: 100%;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 0.75);
 }
 
-h1 {
+.container {
+	max-width: 60vw;
+	height: 50%;
+	margin: 3rem auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	font-size: 1.2rem;
+	padding: 2rem;
+	color: rgb(0, 0, 0);
+	background-color: rgba(255, 255, 255, 0.4);
+	border: 5px solid maroon;
+}
+
+h1,
+h3 {
 	margin-bottom: 3rem;
 	text-align: center;
 }
 
-.alert {
-	text-align: center;
-	font-size: 1.5rem;
-	font-weight: bold;
-	padding: 1.5em;
+h1 {
 	color: maroon;
-	background-color: lightgrey;
-	border: 5px solid black;
-	margin-bottom: 5rem;
 }
 
-.container {
-	margin: 3rem auto;
+.input-data {
+	width: 100%;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	font-size: 1.2rem;
-	padding: 1.5rem;
-	color: rgb(0, 0, 0);
-	background-color: lightgrey;
-	border: 5px solid black;
+	justify-content: space-around;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	overflow: hidden;
+}
+
+.input-data label {
+	display: block;
+	font-size: 1rem;
+	margin-bottom: 0.5rem;
+}
+
+.input-data input {
+	flex: 1 0 100%;
+	height: 3rem;
+	width: 15rem;
+	padding: 10px 20px;
+	border: 2px solid black;
+	border-radius: 10px;
+	margin-bottom: 20px;
+	outline: none;
+}
+
+.btn-submit {
+	outline: none;
+	background-color: maroon;
+	padding: 1rem 1.5rem;
+	border: 0;
+	border-radius: 10rem;
+	padding: 0.75em 2.5em;
+	color: white;
+	font-size: 1.5rem;
+	letter-spacing: 4px;
+	font-weight: semibold;
+	text-transform: uppercase;
+	cursor: pointer;
+	margin: 3rem auto;
+}
+
+.visible {
+	display: block;
+}
+
+.invisible {
+	display: none;
+}
+
+.invalid,
+.negative {
+	color: maroon;
 }
 
 .text {
